did not fix footer overflowing

--- a/CSSFile/homeCSS.css
+++ b/CSSFile/homeCSS.css
@@ -22,7 +22,7 @@
   /*here are vintage colors- more in the website in disscussion section in github*/
 }
 body{
-
+  scroll-behavior: smooth;
 }
 /*------nav----*/
 nav{
@@ -167,15 +167,22 @@ text-align: center;
 .featured-stories img{
   width: 100%;
 }
-/*-------footer----*/
+/*-------footer----????? footer overflow when page shrinking??????whyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy*/
+.foot .container{
+  min-height: 430px;
+
+}
 footer {
-  height: 30vh;
+  width: 100%;
   background-color: #270000;  /* Or your color */
+
 }
 /* You can add more styles for other footer elements here */
 footer .container {
   /* Example: Add padding to the container inside the footer */
   padding: 20px;
+  display: block;
+  flex-wrap: wrap;
 }
 
 footer ul {
